add torrent and plex commands

--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         
   
   <span class="md-ellipsis">
-    🐧 Linux Commands
+    🐧 Linux
   </span>
   
 
@@ -751,10 +751,10 @@
 </p>
 
 <p>Структура языка, синтаксис командлетов и модулей, работа с объектами, данными, файловой системой, сетевыми утилитами, базами данных, REST API, классами и методами платформы .NET, системами мониторинга и системного администрирования (Active Directory, MS Exchange, Hyper-V, VMWare). Заметки основаны на принципе примеров и краткого описания.</p>
-<p>Исходный репозиторий содержит набор полезных <a href="https://github.com/Lifailon/PS-Commands/tree/rsa/Scripts">скриптов и модулей</a> автора, а также <a href="https://github.com/Lifailon/PS-Commands/tree/rsa/WinForms">тестовый стенд WinForms</a> с примерами реализации большинства функционала (DataGridView, Button, Checkbox и т.д.), который можно использовать как шаблон для создания своей программы с графическим интерфейсом.</p>
+<p>Исходный репозиторий содержит набор полезных <a href="https://github.com/Lifailon/PS-Commands/tree/rsa/Scripts">скриптов и модулей</a> автора, а также <a href="https://github.com/Lifailon/PS-Commands/tree/rsa/WinForms">тестовый стенд WinForms</a> с примерами реализации большинства функционала (DataGridView, Button, Checkbox и т.д.), который можно использовать как шаблон для создания программы с графическим интерфейсом.</p>
 <hr />
 <ul>
-<li>💬 <strong>20.05.2024</strong>: Добавлены заметки по работе с Docker 🐳 <a href="Docker">Docker</a></li>
+<li>💬 <strong>20.05.2024</strong>: Добавлены заметки по работе с 🐳 <a href="Docker">Docker</a></li>
 <li>💬 <strong>15.07.2024</strong>: Добавлены заметки по работе с системными командами и консольными утилитами 🐧 <a href="Linux">Linux</a></li>
 </ul>
 <hr />
